--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,5 +1,17 @@
 name: Deployment
-on: push
+on:
+  push:
+    branches:
+      - 'main'
+      - 'master'
+      - 'feat/**'
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - ready_for_review
+  workflow_dispatch:
+
 jobs:
   pre-deploy:
     runs-on: ubuntu-latest
@@ -8,7 +20,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Get CWD and all of its files
         run: pwd && ls -laR
-      - name: Install dependencies
+      - name: Install dependencies for linting
         run: pip install -r requirements-test.txt
       - name: Lint
         run: python lint.py
@@ -18,5 +30,7 @@ jobs:
     needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Ger code
+        uses: actions/checkout@v3
       - name: Deploy
         run: python deploy.py
