--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -34,3 +34,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Deploy
         run: python deploy.py
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: 'artifact'
+          path: |
+            deployed.txt
+            package.json
+            dist
